https://github.com/rdoc/rdoc/issues

RDoc 4.0 includes several new features and several breaking changes.  The
changes should not affect users of `rdoc` or `ri`.

Notable feature additions are markdown support and an WEBrick servlet that can
serve HTML from an ri store.  (This means that RubyGems 2.0+ no longer needs
to build HTML documentation when installing gems.)

* Minor enhancements:
  * Added --page-dir option to give pretty names for a FAQ, guides, or other
    documentation you write that is not stored in the project root.  For
    example, with the following layout:

      README.txt
      guides/syntax.txt
      guides/conversion.txt

    Running `rdoc --page-dir guides` will make the files in "guides" appear to
    be at the top level of the project.  This means they will appear to exist
    at the top level in HTML output and you can access them with
    `ri your_gem:syntax` and `ri your_gem:conversion`.

* Bug fixes:
  * Fully qualified names for constants declared from the top level are now
    attached to their class or module properly.

=== 4.0.0.preview2 / 2012-12-01

* Breaking changes
  * The default output encoding for RDoc is now UTF-8.  Previously RDoc used
    the default external encoding which was determined from your locale.
    Issue #106 by Justin Baker.
  * RDoc::RI::Store is now RDoc::Store so ri data generated by RDoc 4 cannot
    be read by earlier versions of RDoc.  RDoc::RI::Store exists as an alias
    of RDoc::Store so ri data from older versions can still be read.
    RDoc::RI::Store will be removed in RDoc 5.

    Tests that create RDoc::CodeObjects on the fly without wiring them into
    the documentation tree (did not use add_class, add_method, etc.) must be
    updated to use these methods.  The documentation tree automatically
    attaches them to the store instance which allows lookups to work
    correctly.  Additionally, a new method RDoc::Store#add_file must be used