@@ -10,7 +10,7 @@ Notable feature additions are markdown support and an WEBrick servlet that can
 serve HTML from an ri store.  (This means that RubyGems 2.0+ no longer needs
 to build HTML documentation when installing gems.)
 
-* Minor enhancements:
+* Minor enhancements
   * Added --page-dir option to give pretty names for a FAQ, guides, or other
     documentation you write that is not stored in the project root.  For
     example, with the following layout:
@@ -24,9 +24,10 @@ to build HTML documentation when installing gems.)
     at the top level in HTML output and you can access them with
     `ri your_gem:syntax` and `ri your_gem:conversion`.
 
-* Bug fixes:
+* Bug fixes
   * Fully qualified names for constants declared from the top level are now
     attached to their class or module properly.
+  * Fixed table of contents display in HTML output for classes and modules.
 
 === 4.0.0.preview2 / 2012-12-01
 
